Changes in Controller Js File
